# odmr-rebuild-01

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md
apps/odmr-cli/: Cargo.toml
apps/odmr-cli/src/: gui_bridge.rs  hardware_profile_verify.rs  hardware_smoke.rs  hardware_state_snapshot.rs  hardware_verify_mag_lock.rs  live_bridge.rs  main.rs  oe_rall_labview_probe.rs  run_audit_continuity.rs  run_execute.rs
configs/calibrations/: main.json
configs/observed/: oe1022d_ch_b_official_software_state_2026-06-15.json  oe1022d_ch_b_pll_locked_labview_2026-06-11.json
configs/plans/: constant_field_single_point.json  grid_2d_raster_0_50_100ut.json  grid_2d_raster_small.json  grid_3d_example.json  grid_3d_raster_0_50_100ut_validation.json  mag_zero_lock_verify.json  minimal_3point_runtime.json  no_magnetic_control_single_step.json  x_axis_1d_bounce_15min.json  x_axis_1d_bounce_30min.json  x_axis_1d_bounce_60min.json  zero_baseline_single_point.json
configs/profiles/: cni_laser_run_off_background.json  cni_laser_run_on_background.json  cni_laser_run_on_background_180mw.json  oe1022d_run_3d_validation_fast.json  oe1022d_run_ch_b_observed.json  oe1022d_run_ch_b_observed_tc100ms.json  oe1022d_run_ch_b_tc100ms.json  oe1300_run_tcp_default.json  smb100a_probe2_full_2740_3000_500khz_500ms_m10.json  smb100a_run_3d_validation_fast.json  smb100a_run_monitor_2830_2890_-10dbm.json  smb100a_run_pll_default.json  smb100a_run_short_sweep_15min.json
configs/stations/: lab_a.example.json  lab_a.json  lab_a_oe1300_tcp.json  lab_windows_full.json  lab_windows_oe_only.json
crates/acquisition-runtime/: Cargo.toml
crates/cni-laser-commands/: Cargo.toml
crates/cni-laser-transport/: Cargo.toml
crates/cni-laser-transport/src/: lib.rs
crates/device-transport/: Cargo.toml
crates/m8812-commands/: Cargo.toml
crates/m8812-transport/: Cargo.toml
crates/oe1022d-commands/: Cargo.toml
crates/oe1022d-transport/: Cargo.toml
crates/oe1022d-transport/src/: lib.rs  pyvisa_worker.py
crates/smb100a-commands/: Cargo.toml
crates/smb100a-transport/: Cargo.toml
crates/station-resolver/: Cargo.toml
crates/station-resolver/src/: lib.rs
docs/equipment_manual/: README.md
docs/rebuild/: 00_scope.md  01_architecture.md  02_runtime_protocol.md  03_artifact_schema.md  04_device_command_specs.md  05_mvp_acceptance_tests.md  06_device_connection_facts.md  07_station_verify_and_hardware_checklist.md  08_verified_command_and_runtime_baseline.md  09_运行与配置手册.md  10_原标签契约.md  11_变更与踩坑.md  12_原厂锁零事实与边界.md  13_csharp_primary_stack.md  14_experiment_reliability_without_live_frontend.md  15_rust_archive_exit.md  16_python_console_protocol.md  17_odmr_postprocessing_reference.md  17_pyside6_console.md  18_oe1300_remote_control_extract.md  18_run_data_reading_guide.md  19_oe1300_ethernet_sampling_validation.md
python/: pyproject.toml
python/odmr_gui/: app.py
reports/resolve_probe2_xyz20_full_2740_3000_500khz_500ms/: README.md  run_resolve_results.csv  run_resolve_results.jsonl  run_resolve_summary.json
reverse_application/reverse_output/: README.md  para.xml  scan_devices.py  verify_protocol.py  磁场控制系统软件说明-文字版.md  逆向分析报告-协议与算法还原.md
tools/config-generator/: README.md  odmr_config_core.py  odmr_config_generator.py
tools/odmr-console-python/: README.md  odmr_console.py  odmr_console_core.py  odmr_console_qt.py  odmr_console_qt_artifact_review_page.py  odmr_console_qt_config_generator_page.py  odmr_console_qt_resolve_page.py  odmr_console_qt_run_bundle_page.py  odmr_console_qt_run_monitor_page.py  odmr_console_qt_shared.py
tools/odmr-postprocess/: README.md  analyze_odmr_ml_dataset.py  analyze_run.py  (+7 more)
(+230 files in other folders)
