[package]
name = "odmr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "odmr"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["clock"] }
acquisition-runtime = { path = "../../crates/acquisition-runtime" }
station-resolver = { path = "../../crates/station-resolver" }
smb100a-commands = { path = "../../crates/smb100a-commands" }
smb100a-transport = { path = "../../crates/smb100a-transport" }
m8812-commands = { path = "../../crates/m8812-commands" }
m8812-transport = { path = "../../crates/m8812-transport" }
oe1022d-commands = { path = "../../crates/oe1022d-commands" }
oe1022d-transport = { path = "../../crates/oe1022d-transport" }
cni-laser-transport = { path = "../../crates/cni-laser-transport" }
ctrlc = "3.4"
device-transport = { path = "../../crates/device-transport" }
