[package]
name = "cni-laser-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cni_laser_transport"
path = "src/lib.rs"

[dependencies]
cni-laser-commands = { path = "../cni-laser-commands" }
device-transport = { path = "../device-transport" }
serialport = "4"
