[package]
name = "oe1022d-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "oe1022d_transport"
path = "src/lib.rs"

[dependencies]
device-transport = { path = "../device-transport" }
oe1022d-commands = { path = "../oe1022d-commands" }
serialport = "4"
